test/compflags/checks/checkModByZeroScope-llvm-none.good
checkModByZeroScope-llvm-none.chpl:7: error: halt reached - Attempt to compute a modulus by zero
