test/compflags/checks/checkModByZeroScope-llvm-none.chpl
/* Future for scoped modulus zero error message */

{
  var numint = 10,
      denomint = 0;

  writeln(numint % denomint);
}
